--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "repositories": [
         {
             "type": "vcs",
-            "url": "https://github.com/akeneo/pim-community-dev.git"
+            "url": "https://github.com/akeneo/pim-community-dev.git",
+            "no-api": true
         }
     ],
     "require": {
