--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,19 @@
 language: php
-sudo: false
 
-php:
-    - 5.6
+php: 7.1
+
+git:
+    depth: 5
 
 cache:
     directories:
         - $HOME/.composer/cache/files
-
-before_install:
+        
+install:
     - phpenv config-rm xdebug.ini || echo "xdebug not available for PHP $TRAVIS_PHP_VERSION"
     - echo "memory_limit=3G" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
-    - echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
-
-install:
-    - composer install --no-interaction --no-scripts --prefer-dist  --optimize-autoloader
+    - echo -e "Host *\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
 
 script:
+    - composer install --no-interaction --no-scripts --prefer-dist
     - ./bin/phpspec run
