--- a/src/Resources/config/query_builders.yml
+++ b/src/Resources/config/query_builders.yml
@@ -1,12 +1,12 @@
 parameters:
-    pim_extended_attribute_type.doctrine.query.filter.text_collection.class: Pim\Bundle\ExtendedAttributeTypeBundle\Filter\Doctrine\ORM\TextCollectionFilter
+        pim_catalog.query.elasticsearch.filter.text_collection.class: Pim\Bundle\CatalogBundle\Elasticsearch\Filter\Attribute\TextFilter
 
 services:
-    pim_extended_attribute_type.doctrine.query.filter.text_collection:
-        class: '%pim_extended_attribute_type.doctrine.query.filter.text_collection.class%'
+    pim_catalog.query.elasticsearch.filter.text_collection:
+        class: '%pim_catalog.query.elasticsearch.filter.text_collection.class%'
         arguments:
             - '@pim_catalog.validator.helper.attribute'
-            - ['pim_catalog_text_collection']
-            - ['CONTAINS', 'DOES NOT CONTAIN', 'EMPTY', 'NOT EMPTY']
+            - [!php/const:\Pim\Bundle\ExtendedAttributeTypeBundle\AttributeType\ExtendedAttributeTypes::TEXT_COLLECTION]
+            - ['STARTS WITH', 'CONTAINS', 'DOES NOT CONTAIN', '=', 'EMPTY', 'NOT EMPTY', '!=']
         tags:
-            - { name: 'pim_catalog.doctrine.query.filter', priority: 30 }
+            - { name: 'pim_catalog.elasticsearch.query.filter', priority: 30 }
