--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -218,6 +218,5 @@ def podIntegration(phpVersion, body) {
 @NonCPS
 def clearTemplateNames() {
     // see https://issues.jenkins-ci.org/browse/JENKINS-42184
-    def action = currentBuild.rawBuild.getAction(PodTemplateAction.class);
-    if(action) { action.names.clear() }
+    currentBuild.rawBuild.getAction( PodTemplateAction.class )?.stack?.clear()
 }
