--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     ],
     "require": {
-        "akeneo/pim-community-dev": "2.0.*"
+        "akeneo/pim-community-dev": "^2.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "@stable",
