--- a/src/Resources/config/elasticsearch/index_configuration_ee.yml
+++ b/src/Resources/config/elasticsearch/index_configuration_ee.yml
@@ -14,3 +14,4 @@ mappings:
                     path_match: 'values.*-textCollection.*'
                     mapping:
                         type: 'keyword'
+                        index: 'not_analyzed'
