--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -77,6 +77,7 @@ stage("Build") {
                     dir("${env.WORKSPACE}/pim") {
                         checkout([$class: 'GitSCM',
                             branches: [[name: "${pimVersion}"]],
+                            extensions: [[$class: 'LocalBranch', localBranch: "**"]],
                             userRemoteConfigs: [[credentialsId: 'github-credentials', url: "${Globals.pimRepoUrl[pimEdition]}"]]
                         ])
 
