--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "akeneo/pim-community-dev": "dev-master"
+        "akeneo/pim-community-dev": "^3.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "@stable",
